--- a/style.css
+++ b/style.css
@@ -141,6 +141,24 @@ text-align: center;
 color: white;
 }
 
+.details_5{
+    display: block;
+position: absolute;
+width: 100%;
+top: 640px;
+
+
+font-family: 'Josefin Slab' , sans-serif;
+font-weight: 700;
+font-size: 20px;
+text-align: center;
+color: white;
+}
+
+.details_5 strong{
+    color: #FFE8B1;
+}
+
 .sep{
     display: block;
     position: absolute;
